added producer & config

--- a/zbl-utils/src/main/resources/application.properties
+++ b/zbl-utils/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=8881
 
 #kafka config
 spring.kafka.consumer.auto-offset-reset=earliest
+kafka.bootstrap.server.config=localhost:9902
+kafka.serializer.class.config=StringSerializer.class
+kafka.value.class.config=StringSerializer.class
+
