add spring cloud config to scale kafka topic when needed

--- a/zbl-config/src/main/resources/application.properties
+++ b/zbl-config/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-spring.cloud.config.server.git.uri=ssh://localhost/config-repo
-spring.cloud.config.server.git.clone-on-start=true
-server.port=8888
+#spring.cloud.config.server.git.uri=https://github.com/kayshaou/ZblConfiguration
+#spring.cloud.config.server.git.clone-on-start=true
+
 spring.security.user.name=root
 spring.security.user.password=s3cr3t
+spring.config.name=zbl-config-server
+spring.application.name=zbl-config-server
+server.port=8888
+#spring.cloud.config.server.native.searchLocations=file:///C:/Data/04_Project/Microservices/ZblConfiguration
+spring.cloud.config.server.native.searchLocations=classpath:/configs
+spring.cloud.config.server.native.default-label=master
+spring.profiles.active=native
+health.config.enabled=false
+logging.level.root=DEBUG
