--- a/zbl-utils/pom.xml
+++ b/zbl-utils/pom.xml
@@ -20,6 +20,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
@@ -44,14 +45,22 @@
 		</dependency>
     	<!-- cloud config for client -->
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>3.1.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
+
 
 	</dependencies>
 
