add configs, add kafka consumer, connect promotheus

--- a/zbl-services/docker-compose.yml
+++ b/zbl-services/docker-compose.yml
@@ -12,3 +12,18 @@ services:
       KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
+    depends_on:
+      - zookeeper
+  promotheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - "zbl-vol:/tmp/logs"
+    depends_on:
+      - kafka
+volumes:
+  zbl-vol:
+    external: true
+
+
