added Dockerfile for zbl-config

--- a/zbl-utils/src/main/resources/application.yml
+++ b/zbl-utils/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     name: zbl-utils
   kafka:
     consumer:
-      auto-offset-reset: earliest
+      auto-offset-reset: latest
   profile:
     active: native
 
