--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Package zbl-config
       run: mvn -B package --file zbl-config/pom.xml 
     - name: list file
-      run: ls lst
+      run: ls -lat
     - name: Build zbl-config Docker image
       run: docker build . --file zbl-config/Dockerfile --tag zbl-config:$(date +%s)
     - name: Build zbl-registry-pod
