--- a/zbl-registry-pod/Dockerfile
+++ b/zbl-registry-pod/Dockerfile
@@ -5,10 +5,10 @@ FROM openjdk:11
 WORKDIR /app
 
 # Copy the jar file into our app
-COPY zbl-config/target/config-0.0.1-SNAPSHOT.jar /app
+COPY zbl-registry-pod/target/health-0.0.1-SNAPSHOT.jar /app
 # Exposing port 8080
-EXPOSE 8888
+EXPOSE 8887
 
 # Starting the application
-CMD ["java", "-jar", "config-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "health-0.0.1-SNAPSHOT.jar"]
 
