--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,13 +47,29 @@ jobs:
       with:
         images: kayshaoudocker/zbl-config
       
-    - name: Build and push Docker image
+    - name: Build and push zbl-config Docker image
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       with:
         context: .
+        file: zbl-config/Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        
+    - name: Extract metadata (tags, labels) for Docker
+      id: zbl-registry
+      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      with:
+        images: kayshaoudocker/zbl-registry
+        
+    - name: Build and push zbl-registry Docker image
+      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      with:
+        context: .
+        file: zbl-registry-pod/Dockerfile
+        push: true
+        tags: ${{ steps.zbl-registry.outputs.tags }}
+        labels: ${{ steps.zbl-registry.outputs.labels }}
 
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
