--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,15 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+        
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+      
+      
+      
     - name: Package zbl-config
       run: mvn -B package --file zbl-config/pom.xml 
     - name: Build zbl-registry-pod
@@ -36,10 +45,10 @@ jobs:
 #     - name: Build zbl-config Docker image
 #       run: docker build . --file zbl-config/Dockerfile --tag zbl-config:$(date +%s)
     - name: Log in to Docker Hub
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
       
     - name: Extract metadata (tags, labels) for Docker
       id: meta
@@ -48,7 +57,7 @@ jobs:
         images: kayshaoudocker/zbl-config
       
     - name: Build and push zbl-config Docker image
-      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      uses: docker/build-push-action@v3
       with:
         context: .
         file: zbl-config/Dockerfile
@@ -63,7 +72,7 @@ jobs:
       with:
         images: kayshaoudocker/zbl-registry
     - name: Build and push zbl-registry Docker image
-      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      uses: docker/build-push-action@v3
       with:
         context: .
         file: zbl-registry-pod/Dockerfile
