--- a/zbl-config/Dockerfile
+++ b/zbl-config/Dockerfile
@@ -1,14 +1,28 @@
-# Fetching latest version of Java
+# # Fetching latest version of Java
+# FROM openjdk:11
+
+# # Setting up work directory
+# WORKDIR /app
+
+# # Copy the jar file into our app
+# COPY zbl-config/target/config-0.0.1-SNAPSHOT.jar /app
+# # Exposing port 8080
+# EXPOSE 8888
+
+# # Starting the application
+# CMD ["java", "-jar", "/app/config-0.0.1-SNAPSHOT.jar"]
+
+##### newer version
+FROM maven:3.8.4-openjdk-17 as maven-builder
+COPY src /app/src
+COPY pom.xml /app
+
+RUN mvn -f /app/pom.xml clean package -DskipTests
 FROM openjdk:11
 
-# Setting up work directory
-WORKDIR /app
+COPY --from=maven-builder app/target/config-0.0.1-SNAPSHOT.jar /app-service/config-0.0.1-SNAPSHOT.jar
+WORKDIR /app-service
 
-# Copy the jar file into our app
-COPY zbl-config/target/config-0.0.1-SNAPSHOT.jar /app
-# Exposing port 8080
 EXPOSE 8888
-
-# Starting the application
-CMD ["java", "-jar", "/app/config-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","config-0.0.1-SNAPSHOT.jar"]
 
