--- a/zbl-config/Dockerfile
+++ b/zbl-config/Dockerfile
@@ -14,8 +14,8 @@
 
 ##### newer version
 FROM maven:3.8.4-openjdk-17 as maven-builder
-COPY src /app/src
-COPY pom.xml /app
+COPY zbl-config/src /app/src
+COPY zbl-config/pom.xml /app
 
 RUN mvn -f /app/pom.xml clean package -DskipTests
 FROM openjdk:11
