--- a/zbl-config/Dockerfile
+++ b/zbl-config/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:11
 WORKDIR /app
 
 # Copy the jar file into our app
-COPY zbl-config/target/config-0.0.1-SNAPSHOT.jar /app
+COPY target/config-0.0.1-SNAPSHOT.jar /app
 # Exposing port 8080
 EXPOSE 8888
 
