--- a/zbl-services/docker-compose.yml
+++ b/zbl-services/docker-compose.yml
@@ -1,19 +1,26 @@
-version: '2'
+version: '3.5'
 services:
   zookeeper:
-    image: wurstmeister/zookeeper
-    ports:
-      - "2181:2181"
-  kafka:
-    image: wurstmeister/kafka
-    ports:
-      - "9092:9092"
+    image: confluentinc/cp-zookeeper:5.5.0
+    container_name: zookeeper
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
+      ZOOKEEPER_CLIENT_PORT: 2181
+    ports:
+      - 2181
+  broker:
+    image: confluentinc/cp-kafka:5.5.0
+    container_name: broker
+    ports:
+      - "19092:19092"
+      - "9092:9092"
     depends_on:
       - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9092,CONNECTIONS_FROM_HOST://localhost:19092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONNECTIONS_FROM_HOST:PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
   promotheus:
     image: prom/prometheus
     ports:
@@ -21,9 +28,12 @@ services:
     volumes:
       - "zbl-vol:/tmp/logs"
     depends_on:
-      - kafka
+      - broker
 volumes:
   zbl-vol:
     external: true
+networks:
+  zoombala:
+    name: zoombala
 
 
